--- a/styles/style.css
+++ b/styles/style.css
@@ -113,6 +113,9 @@ footer{
     border-radius: 16px;
     margin-top: 100px;
 }
+.section-content{
+    padding: 80px;
+}
 .importance-layer-01{
     border-radius: 16px;
     background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
@@ -222,6 +225,9 @@ footer{
     width: 550px;
     height: 50px;
     border-radius: 8px;
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(13, 19, 33, 0.4);
     background-color: rgb(255, 255, 255);
     border: none;
 }
@@ -230,11 +236,13 @@ footer{
     height: 51px;
     border: none;
     border-radius: 8px;
+    font-size: 20px;
+    font-weight: 600;
     background-color: rgb(255, 255, 255);
     cursor: pointer;
 }
 /* footer container starts here */
-.footer-container{
+#footer-container{
     max-width: 1440px;
     height: 100px;
     border-radius: 16px;
@@ -244,7 +252,7 @@ footer{
     justify-content: space-around;
 }
 .footer-content{
-   margin-top: 32px;
+   margin-top: 30px;
 }
 .footer-text{
     font-size: 20px;
