--- a/styles/style.css
+++ b/styles/style.css
@@ -72,7 +72,7 @@ footer{
     margin-top: 100px;
 }
 .banner-content{
-    background-image: url("/assets/Hero-bg.png");
+    background-image: url("../assets/Hero-bg.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
